--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .heading{
-    font-family: Montserrat;
+    font-family: Nunito Sans;
     text-align: center;
     padding-top: 5%;
 }
 
 .text {
-    font-family: Nunito Sans;
+    font-family: Montserrat;
     margin: 5%;
 }
 
@@ -50,4 +50,74 @@
     background-color: rgb(8, 184, 190);
   }
   
- 
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .3s ease;
+    background-color: red;
+  }
+  
+  /* When you mouse over the container, fade in the overlay icon*/
+  .col-gal:hover .overlay {
+    opacity: 0.5;
+  }
+  
+  /* The icon inside the overlay is positioned in the middle vertically and horizontally */
+  .icon {
+    color: white;
+    font-size: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .container {
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .image {
+    width: 100%;
+    height: auto;
+  }
+
+/* The overlay effect (full height and width) - lays on top of the container and over the image */
+.overlay {
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .3s ease;
+  background-color: rgb(82, 81, 81);
+}
+
+/* When you mouse over the container, fade in the overlay icon*/
+.container:hover .overlay {
+  opacity: 0.5;
+}
+
+/* The icon inside the overlay is positioned in the middle vertically and horizontally */
+.icon {
+  color: white;
+  font-size: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+/* When you move the mouse over the icon, change color */
+.fa-user:hover {
+  color: #eee;
+}
